# privacycash-research

./: README.md  package-lock.json
anchor/: FINAL_IMPLEMENTATION_SUMMARY.md  PIVY_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  ZK_PROOF_IMPLEMENTATION_SUMMARY.md  package-lock.json
anchor/programs/pivy/: Cargo.toml  FLOW_EXAMPLE.md  PERFORMANCE_REPORT.md  README.md  TESTING_GUIDE.md
anchor/programs/pivy/circuits/: PARTIAL_WITHDRAWAL_GUIDE.md  README.md  SECURITY_ANALYSIS.md  bucket_withdrawal.circom  bucket_withdrawal_50.circom  bucket_withdrawal_partial.circom  bucket_withdrawal_partial_50.circom  compile.sh  download_ptau.sh  keypair.circom  merkleProof.circom  setup_keys.sh  transaction.circom  transaction_2x2.circom
anchor/programs/pivy/src/: errors.rs  groth16.rs  lib.rs  merkle_tree.rs  proof_gen.rs  utils.rs
anchor/programs/pivy/src/tests/unit/: mod.rs  pivy_test.rs
reports/: 00_executive_summary.md  01_privacy_cash_compliance_analysis.md  02_pivy_revolutionary_architecture.md  03_pivy_implementation_guide.md  04_pivy_practical_architecture_v2.md  05_design_comparison.md  06_pivy_compliance_logging_system.md  07_privacy_cash_logging_deep_dive.md  08_critical_analysis_honest_verdict.md  09_pivy_solo_dev_implementation.md  10_performance_analysis_coin_selection.md  11_multi_deposit_withdrawal_analysis.md  12_three_critical_questions_answered.md  13_balance_and_indexing_deep_dive.md  14_real_world_implementation_breakdown.md  15_meta_keys_revelation.md  16_circuit_architecture_explained.md  README.md  START_HERE.md  pivy-implementation-report.md
(+6 files in other folders)
