[package]
name = "pivy"
version = "0.1.0"
description = "PIVY - Privacy payment platform for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pivy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
light-hasher = { version = "0.4.0", default-features = false }
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-groth16 = "0.4.0"
ark-ec = "0.4.2"
solana-program = "1.17"
bytemuck = { version = "1.23", features = ["derive"] }
num-bigint = "0.4"
solana-bn254 = "3"

[dev-dependencies]
solana-sdk = "1.17"
